--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
+        run: chmod 777 ./gradlew
 
       - name: Build with Gradle Wrapper
         run: ./gradlew build --no-daemon
