--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,7 +15,7 @@ jobs:
       contents: read
 
     steps:
-      - name: Clone project
+      - name: Checkout sources
         uses: actions/checkout@v4
 
       - name: Set up JDK 21
@@ -27,7 +27,9 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
-        run: chmod 777 ./gradlew
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
       - name: Build with Gradle Wrapper
         run: ./gradlew build --no-daemon
