--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
+# Spring common
 spring.application.name=api.dragons
 server.port=8000
 
+# Postgres JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Disabling the swagger-ui
+springdoc.swagger-ui.enabled=false
+springdoc.api-docs.enabled=false
+springdoc.show-actuator=false
+
+# Management
+management.defaults.metrics.export.enabled=true
+management.endpoint.health.enabled=true
+management.endpoints.web.base-path=/actuator
+management.endpoints.web.exposure.include=*
