--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,8 @@
+version: '3'
+
 services:
-  postgres:
+  database:
+    container_name: 'dragons-api_database'
     image: 'postgres:16'
     environment:
       - 'POSTGRES_DB=dragons'
