--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,12 @@
+version: '3'
+
 services:
-  postgres:
-    image: 'postgres:latest'
+  database:
+    container_name: 'dragons-api_database'
+    image: 'postgres:16'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=dragons'
+      - 'POSTGRES_PASSWORD=root'
+      - 'POSTGRES_USER=app'
     ports:
-      - '5432'
+      - '5432:5432'
