--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,8 +2,10 @@
 spring.application.name=api.dragons.prod
 spring.docker.compose.enabled=false
 
-# H2 Console
-spring.h2.console.enabled=false
-
 # Management
 management.endpoints.web.exposure.include=health
+
+# Database
+spring.datasource.url=DATABASE_URL
+spring.datasource.username=DATABASE_USERNAME
+spring.datasource.password=DATABASE_PASSWORD
