--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,22 @@
 # Spring common
-spring.application.name=api.dragons
-server.port=8000
+spring.application.name=api.dragons.default
 
-# Postgres JPA
+# Server
+server.port=8000
+server.compression.enabled=true
+
+# Serialization
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+# JPA (Java Persistence API)
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=false
+
+# Database
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Disabling the swagger-ui
 springdoc.swagger-ui.enabled=false
@@ -12,7 +24,9 @@ springdoc.api-docs.enabled=false
 springdoc.show-actuator=false
 
 # Management
-management.defaults.metrics.export.enabled=true
 management.endpoint.health.enabled=true
-management.endpoints.web.base-path=/actuator
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info,metrics
+management.defaults.metrics.export.enabled=true
+
+integration.api[0].base.url=https://pokeapi.co
+integration.api[0].base.version=/api/v2/
