--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,10 +2,13 @@
 spring.application.name=api.dragons.local
 spring.docker.compose.enabled=true
 
-# H2 Console
-spring.h2.console.enabled=true
-
 # Enabling the swagger-ui
-springdoc.swagger-ui.enabled=true
-springdoc.api-docs.enabled=true
 springdoc.show-actuator=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+# Database
+spring.datasource.password=root
+spring.datasource.username=toothless
+spring.datasource.name=container.database
+spring.datasource.url=jdbc:postgresql://localhost:5432/dragons
