--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
     id 'org.springframework.boot' version '3.3.2'
     id 'io.spring.dependency-management' version '1.1.6'
 }
@@ -44,6 +45,7 @@ dependencies {
 //	Runtime
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
     runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'com.h2database:h2'
 
 //	Development
     compileOnly 'org.projectlombok:lombok'
@@ -60,10 +62,33 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
+jacoco { // https://docs.gradle.org/current/userguide/jacoco_plugin.html
+    toolVersion = "0.8.12"
 }
 
 bootJar {
     archiveFileName = 'app.jar'
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+}
+
+tasks.register('unitTest', Test) {
+    finalizedBy jacocoTestReport
+    useJUnitPlatform {
+        includeTags 'unit'
+    }
+}
+
+tasks.register('integrationTest', Test) {
+    finalizedBy jacocoTestReport
+    useJUnitPlatform {
+        includeTags 'integration'
+    }
 }
